# dlt-cdc-trino-dbt

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: docker-compose-pg-cdc.yml  docker-compose-storage.yml  docker-compose-trino.yml
docker/trino/worker-1/etc/: node.properties
docker/trino/worker-1/etc/catalog/: iceberg.properties
docker/trino/worker-2/etc/: jvm.config  node.properties
transformer/: dbt_project.yml  profiles.yml
transformer/models/: sources.yml
transformer/models/marts/: dim_companies.sql  fct_events.sql  fct_invoices.sql  schema.yml
transformer/models/reports/: rpt_companies_stats.sql  rpt_events_by_day_type.sql  rpt_invoices_stats.sql  schema.yml
transformer/models/staging/: schema.yml  stg_companies.sql  stg_events.sql  stg_invoices.sql
transformer/tests/: test_event_counts_positive.sql  test_invoices_company_rel.sql
